--- a/src/app.css
+++ b/src/app.css
@@ -11,7 +11,7 @@
     position: relative;
     display: grid;
     grid-template-columns: repeat(4, minmax(100px, 1fr));
-    grid-gap: 25px;
+    gap: 25px;
     padding: 25px;
     background: white;
     border-radius: 5px;
