--- a/src/app.css
+++ b/src/app.css
@@ -55,3 +55,11 @@
 input[type="radio"]:checked + .custom-radio::after {
     transform: translate(-50%, -50%) scale(1);
 }
+
+.custom-dot-list-style {
+  position: absolute;
+  bottom: 10px;
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
