--- a/src/app.css
+++ b/src/app.css
@@ -66,3 +66,12 @@ input[type="radio"]:checked + .custom-radio::after {
 .carousel-container {
   padding: 0;
 }
+
+.carousel-item {
+  transition: transform 100ms ease-in-out;
+}
+
+.react-multi-carousel-item {
+  transform-style: preserve-3d;
+  backface-visibility: hidden;
+}
